# fastapi-streaming-response

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md
app/: pyproject.toml  setup.cfg  start-wrapper.sh
app/fastapi_streamingresponse_demo/: cli.py  llm.py  routes.py  server-sent-event.py
app/fastapi_streamingresponse_demo/ui/: index.html  script.js
